[project]
name = "trop-nwm"
version = "0.1.0"
description = "Tropospheric Delay Calculator from Numerical Weather Models"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "cfgrib>=0.9.15.0",
    "dask>=2025.5.1",
    "distributed>=2025.5.1",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.1",
    "metpy>=1.7.0",
    "numpy>=2.2.6",
    "pyarrow>=20.0.0",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "xarray[io]>=2025.6.1",
    "zarr>=2.18.3",
]

[project.scripts]
trop-nwm = "trop_nwm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "notebook>=7.4.4",
    "plotly>=6.2.0",
]
