[project]
name = "trop-nwm"
version = "0.1.0"
description = "Tropospheric Delay Calculator from Numerical Weather Models"
readme = "README.md"
authors = [
    { name = "Aki", email = "838013444@qq.com" }
]
requires-python = "==3.10.*"
dependencies = [
    "cfgrib>=0.9.10",
    "joblib>=1.0.0",
    "numpy>=1.22.0",
    "rich>=10.0.0",
    "scipy>=1.12.0",
    "tqdm-joblib>=0.0.4",
    "xarray[io]>=2022.3.0",
    "fastparquet>=2022.1.0",
    "pyarrow>=8.0.0",
]

[project.scripts]
trop-nwm = "trop_nwm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/trop_nwm"]

[tool.hatchling.build.targets.wheel.force-include]
"src/trop_nwm/reference" = "trop_nwm/reference"

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
    "notebook>=7.4.4",
    "plotly>=6.2.0",
]
